--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -148,15 +148,14 @@ a:hover {
 .custom-navbar {
   margin: 0 auto;
   background-color: rgba(0, 0, 0, 0.07);
-  border-radius: 4svw;
+  border-radius: 2svw;
   align-content: center;
   justify-content:center;
   top: 0;
   /* Position at the top */
-  animation: slideIn 0.4s cubic-bezier(.24, .51, .8, .94) both;
-  z-index: 1000;
+  animation: slideIn 0.4s cubic-bezier(.24, .51, .8, .94) ;
   /* Ensure the navbar is above other elements */
-  width: min-content !important;
+  width: min-content ;
 }
 
 .clickIcon {
@@ -167,7 +166,7 @@ a:hover {
 
 
   .navBrand {
-    font-size: 1.5em;
+    font-size: 1.7em;
     /* Reduce the font size */
    max-width: 40svw;
    
